<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/fragment_buttons"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <Button
        android:id="@+id/button_one"
        android:text="@string/button_one_label"
        style="@style/NumberStyle"/>

    <Button
        android:id="@+id/button_two"
        android:layout_toRightOf="@id/button_one"
        android:layout_toEndOf="@id/button_one"
        android:text="@string/button_two_label"
        style="@style/NumberStyle"/>

    <Button
        android:id="@+id/button_three"
        android:layout_toRightOf="@id/button_two"
        android:layout_toEndOf="@id/button_two"
        android:text="@string/button_three_label"
        style="@style/NumberStyle"/>

    <Button
        android:id="@+id/button_four"
        android:layout_below="@id/button_one"
        android:text="@string/button_four_label"
        style="@style/NumberStyle"/>

    <Button
        android:id="@+id/button_five"
        android:layout_below="@id/button_two"
        android:layout_toRightOf="@id/button_four"
        android:layout_toEndOf="@id/button_four"
        android:text="@string/button_five_label"
        style="@style/NumberStyle"/>

    <Button
        android:id="@+id/button_six"
        android:layout_below="@id/button_three"
        android:layout_toRightOf="@id/button_five"
        android:layout_toEndOf="@id/button_five"
        android:text="@string/button_six_label"
        style="@style/NumberStyle"/>

    <Button
        android:id="@+id/button_seven"
        android:layout_below="@id/button_four"
        android:text="@string/button_seven_label"
        style="@style/NumberStyle"/>

    <Button
        android:id="@+id/button_eight"
        android:layout_below="@id/button_five"
        android:layout_toRightOf="@id/button_seven"
        android:layout_toEndOf="@id/button_seven"
        android:text="@string/button_eight_label"
        style="@style/NumberStyle"/>

    <Button
        android:id="@+id/button_nine"
        android:layout_below="@id/button_six"
        android:layout_toRightOf="@id/button_eight"
        android:layout_toEndOf="@id/button_eight"
        android:text="@string/button_nine_label"
        style="@style/NumberStyle"/>

    <Button
        android:id="@+id/button_zero"
        android:layout_below="@id/button_seven"
        android:text="@string/button_zero_label"
        style="@style/ZeroStyle"/>

    <Button
        android:id="@+id/button_plus"
        android:layout_toRightOf="@id/button_three"
        android:layout_toEndOf="@id/button_three"
        android:text="@string/button_plus_label"
        style="@style/OperatorStyle"/>

    <Button
        android:id="@+id/button_minus"
        android:layout_below="@id/button_plus"
        android:layout_toRightOf="@id/button_six"
        android:layout_toEndOf="@id/button_six"
        android:text="@string/button_minus_label"
        style="@style/OperatorStyle"/>

    <Button
        android:id="@+id/button_multiply"
        android:layout_below="@id/button_minus"
        android:layout_toRightOf="@id/button_nine"
        android:layout_toEndOf="@id/button_nine"
        android:text="@string/button_multiply_label"
        style="@style/OperatorStyle"/>

    <Button
        android:id="@+id/button_divide"
        android:layout_below="@id/button_multiply"
        android:layout_toRightOf="@id/button_nine"
        android:layout_toEndOf="@id/button_nine"
        android:text="@string/button_divide_label"
        style="@style/OperatorStyle"/>

    <Button
        android:id="@+id/button_modulus"
        android:layout_below="@id/button_nine"
        android:layout_toRightOf="@id/button_eight"
        android:layout_toEndOf="@id/button_eight"
        android:text="@string/button_modulus_label"
        style="@style/OperatorStyle"/>

    <Button
        android:id="@+id/button_clear"
        android:layout_below="@id/button_zero"
        android:text="@string/button_clear_label"
        style="@style/ClearStyle"/>

    <Button
        android:id="@+id/button_equals"
        android:layout_below="@id/button_divide"
        android:layout_toRightOf="@id/button_clear"
        android:layout_toEndOf="@id/button_clear"
        android:text="@string/button_equals_label"
        style="@style/EqualsStyle"/>


</RelativeLayout>